# Schoenemann

./: .gitignore  CMakeLists.txt  Makefile  Makefile (2)  README.md  find_exe.py
.github/workflows/: cmake-multi-platform.yml
Schoenemann/: CMakeLists.txt  Evaluate.cpp  Evaluate.h  Makefile  Moveorder.cpp  Moveorder.h  Schoenemann.cpp  Schoenemann.h  Search.cpp  Search.h  chess.hpp  consts.h  file.cpp  helper.cpp  helper.h  incbin.h  main.cpp  moveorder.cpp  moveorder.h  nnue.cpp  nnue.h  nnue.hpp  psqt.cpp  psqt.h  schoenemann.cpp  schoenemann.h  search.cpp  search.h  see.cpp  see.h  simple-133.h  simple-95.h  timeman.cpp  timeman.h  tt.cpp  tt.h
Schoenemann/MantaRay/IO/: BinaryFileStream.h
Schoenemann/MantaRay/Perspective/: PerspectiveNNUE.h
Schoenemann/NNUE/: accumulator.h  nnueconstants.h  perspective.h  stream.h  utils.h
Schoenemann/datagen/: gen.cpp  gen.h
Schoenemann/movegen/: benchmark.hpp  chess.hpp  position.cpp  position.h  tables.cpp  tables.h  types.cpp  types.h
scr/: Makefile
src/: .gitignore  Makefile  null.exp  null.lib
